--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 Banking API/.classpath
 Banking API/.project
 *.class
+Project-0/Banking API/.project
+Project-0/Banking API/.classpath
+Project-0/.metadata/.plugins/org.eclipse.ui.intro/introstate
+Project-0/.metadata/.lock
+Project-0/.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
