--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ Project-0/Banking API/.classpath
 Project-0/.metadata/.plugins/org.eclipse.ui.intro/introstate
 Project-0/.metadata/.lock
 Project-0/.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+Project_0/.project
+Project_0/.classpath
